--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link" href="/manifiesto.html">conócenos</a>
+		          <a class="nav-link" href="/manifiesto.html">manifiesto</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="/proyectos.html">proyectos</a>
@@ -154,12 +154,12 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
-					<img src="static/img/medellin.jpeg" alt="">
+					<img src="static/img/medegreen.png" alt="">
 				</div>
 				<div class="col-lg-6 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-						MedeGreen Para Tí.
+						Medegreen para tí.
 				</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
@@ -171,7 +171,7 @@
 				<div class="col-lg-6 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-						BogotaGreen Para Tí.
+						Bogotagreen para tí.
 					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
@@ -180,12 +180,12 @@
 					<a class="btn" href="/proyectos.html">Descubre más acerca de éste proyecto</a>
 				</div>
 				<div class="col-lg-6">
-					<img src="static/img/bogota.jpg" alt="">
+					<img src="static/img/bogotagreen.png" alt="">
 				</div>
 			</div>
 			<div class="row mobile">
 				<div class="col-lg-6">
-					<img src="static/img/bogota.jpg" alt="">
+					<img src="static/img/bogotagreen.png" alt="">
 				</div>
 				<div class="col-lg-6 m-auto">
 					<div class="content-title"
@@ -221,7 +221,8 @@
 	      </div>
 	      <div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 	        <div class="m-auto">
-	          <a href="/manifiesto.html"> conócenos</a>&nbsp; | &nbsp;
+			  <a href="static/docs/cpi3nsa_doc.html">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+	          <a href="/manifiesto.html">manifiesto</a>&nbsp; | &nbsp;
 	          <!--<a href="#">online store</a> &nbsp;-->
 	          <a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
 	          <a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
