--- a/manifiesto.html
+++ b/manifiesto.html
@@ -79,6 +79,16 @@
 				<br>
 				<br>
 				<strong>Cpi3nsa</strong>
+				<br>
+				<br>
+				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
+					<a href="static/docs/cpi3nsa_doc.html">
+						MÁS ACERCA DE CPI3NSA
+					</a>
+				</div>
+				<div class="mt-5" style="font-size: 0.7rem; opacity: 0.8;">
+					La organización Cpi3nsa es una entidad sin ánimo de lucro. Los aportes de los corporados, así como las donaciones de miembros, asociados y afiliados contribuyen al sostenimiento de la organización y sus proyectos. El 1% de los ingresos son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento y educación para niños.
+				</div>
 			</div>
 		</section>
 	</main>
