--- a/proyectos.html
+++ b/proyectos.html
@@ -52,13 +52,13 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-6">
-					<img src="static/img/medellin.jpeg" alt="">
+				<div class="col-lg-5">
+					<img src="static/img/medegreen.png" alt="">
 				</div>
-				<div class="col-lg-6 m-auto">
+				<div class="col-lg-7 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-						MedeGreen Para Tí
+						Medegreen para tí
 					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
@@ -69,33 +69,14 @@
 					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
-			<div class="row no-mobile">
-				<div class="col-lg-6 m-auto">
+			<div class="row">
+				<div class="col-lg-5">
+					<img src="static/img/bogotagreen.png" alt="">
+				</div>
+				<div class="col-lg-7 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-						BogotaGreen Para Tí
-					</div>
-					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
-						consciente.
-						<br>
-						<br>
-						Meta: 2030
-					</div>
-					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
-				</div>
-				<div class="col-lg-6">
-					<img src="static/img/bogota.jpg" alt="">
-				</div>
-			</div>
-			<div class="row mobile">
-				<div class="col-lg-6">
-					<img src="static/img/bogota.jpg" alt="">
-				</div>
-				<div class="col-lg-6 m-auto">
-					<div class="content-title"
-						style="opacity: 0.5; font-weight: 400;">
-						BogotaGreen Para Tí
+						Bogotagreen Para Tí
 					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
@@ -108,48 +89,16 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-6">
-					<img src="static/img/plants.jpg" alt="">
+				<div class="col-lg-5">
+					<img src="static/img/eco_shipping.jpg" alt="">
 				</div>
-				<div class="col-lg-6 m-auto">
+				<div class="col-lg-7 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
 						EcoShipping
 					</div>
 					<div class="content-body">
-						Un nuevo modelo de negocio ecologico y conscinte para tus entrgas a domicilio.
-					</div>
-					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
-				</div>
-			</div>
-			<div class="row no-mobile">
-				<div class="col-lg-6 m-auto">
-					<div class="content-title"
-						style="opacity: 0.5; font-weight: 400;">
-						Cpi3nsa en Movimiento
-					</div>
-					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
-						consciente.
-					</div>
-					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
-				</div>
-				<div class="col-lg-6">
-					<img src="static/img/think_thank.jpeg" alt="">
-				</div>
-			</div>
-			<div class="row mobile">
-				<div class="col-lg-6">
-					<img src="static/img/think_thank.jpeg" alt="">
-				</div>
-				<div class="col-lg-6 m-auto">
-					<div class="content-title"
-						style="opacity: 0.5; font-weight: 400;">
-						Cpi3nsa en Movimiento
-					</div>
-					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
-						consciente.
+						Delivery y delivery premium desde una nueva perspectiva ecológica y mínimo impacto ambiental.
 					</div>
 					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
