--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		          <a class="nav-link" href="/proyectos.html">proyectos</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="/tiends.html">tienda virtual</a>
+		          <a class="nav-link" href="/tienda.html">tienda virtual</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="/contacto.html">hablemos</a>
+		          <a class="nav-link" href="https://hablemos574452.typeform.com/to/AHHYnkAm">hablemos</a>
 		        </li>
 		      </ul>
 		    </div>
@@ -72,7 +72,7 @@
 							<div class="header-subtitle">
 								Un tanque de pensamiento que da vida a la<br>solución que necesitas.
 							</div>
-							<a class="btn" href="#">Descubre YA qué podemos hacer por tí</a>
+							<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
 						</div>
 					</div>
 				</div>
@@ -89,58 +89,133 @@
 			<div class="row">
 				<div class="col-lg-3">
 					<div class="about-card about-card-down">
-						<img src="static/img/growth.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Soluciones Inteligentes de Cooperación (SIC)
+						<a href="/soluciones.html">
+							<img src="static/img/growth.svg">
+							<div class="about-card-body">
+								<div class="about-card-title">
+									Soluciones Inteligentes de Cooperación (SIC)
+								</div>
+								<div class="about-card-text">
+									Diseñadas estratégicamente para transformar tu negocio.
+								</div>
 							</div>
-							<div class="about-card-text">
-								Diseñadas estratégicamente para transformar tu negocio.
-							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-lg-3">
 					<div class="about-card">
-						<img src="static/img/stars.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Tanque de Pensamiento
+						<a href="https://hablemos574452.typeform.com/to/AHHYnkAm">
+							<img src="static/img/stars.svg">
+							<div class="about-card-body">
+								<div class="about-card-title">
+									Tanque de Pensamiento
+								</div>
+								<div class="about-card-text">
+									Ponemos a funcionar nuestro tanque para dar soluciones a tus dolores de cabeza.
+								</div>
 							</div>
-							<div class="about-card-text">
-								Ponemos a funcionar nuestro tanque para dar soluciones a tus dolores de cabeza.
-							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-lg-3">
 					<div class="about-card about-card-down">
-						<img src="static/img/connect.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Red de Cooperación Nacional e Internacional
+						<a href="/modelo_integracion.html">
+							<img src="static/img/connect.svg">
+							<div class="about-card-body">
+								<div class="about-card-title">
+									Red de Cooperación Nacional e Internacional
+								</div>
+								<div class="about-card-text">
+									Un imperativo organizacional de instituciones, alcaldías, organizaciones multilaterales, actores, grupos de interés y personas basados  en la apropiación pública del conocimiento.
+								</div>
 							</div>
-							<div class="about-card-text">
-								Un imperativo organizacional de instituciones, alcaldías, organizaciones multilaterales, actores, grupos de interés y personas basados  en la apropiación pública del conocimiento.
-							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-lg-3">
 					<div class="about-card">
-						<img src="static/img/nature.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Proyectos
+						<a href="/proyectos.html">
+							<img src="static/img/nature.svg">
+							<div class="about-card-body">
+								<div class="about-card-title">
+									Proyectos
+								</div>
+								<div class="about-card-text">
+									Conoce nuestros modelos de negocio a poner en marcha para  el 2020 - 2021.
+								</div>
 							</div>
-							<div class="about-card-text">
-								Conoce nuestros modelos de negocio a poner en marcha para  el 2020 - 2021.
-							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
 		</section>
+		<hr>
+		<section class="founders container">
+			<div class="armando mb-5">
+				<div class="row mt-5">
+					<div class="col-sm-3">
+						<img src="static/img/santy.jpg" alt="">
+					</div>
+					<div class="col-sm-9">
+						<div class="about-card-text mb-4">
+							<div class="font-italic">
+								"Unir ideas y crear modelos de negocio exitosos para mi equipo es lo que más disfruto y lo que mejor sé hacer. ¿Te interesa que cree un modelo de negocio contigo? Escríbeme!"
+							</div>
+							<div>
+								<br>
+								Armando
+								<br>
+								Líder de Estrategia Corporativa
+							</div>
+						</div>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/F1xLfOAc">Crea con Armando!</a>
+					</div>
+				</div>
+			</div>
+			<div class="sebas mt-5 mb-5">
+				<div class="row mt-5">
+					<div class="col-sm-3">
+						<img src="static/img/santy.jpg" alt="">
+					</div>
+					<div class="col-sm-9">
+						<div class="about-card-text mb-4">
+							<div class="font-italic">
+								"¿Conoces el green marketing? Es lo máximo! Es lo último en tendencias y es lo que se viene ahora. Déjame ayudarte en este tema..."
+							</div>
+							<div>
+								<br>
+								Sebastian Gil
+								<br>
+								Líder Organizacional de Marketing y Tendencias
+							</div>
+						</div>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/sLSOe5ab">Habla con Sebas!</a>
+					</div>
+				</div>
+			</div>
+			<div class="santy mt-5 mb-5">
+				<div class="row mt-5">
+					<div class="col-sm-3">
+						<img src="static/img/santy.jpg" alt="">
+					</div>
+					<div class="col-sm-9">
+						<div class="about-card-text mb-4">
+							<div class="font-italic">
+								"Cuando nos reunimos en equipo es el principio, mantenernos en equipo es el progreso, trabajar en equipo asegura el éxito."
+							</div>
+							<div>
+								<br>
+								Santiago Murillo
+								<br>
+								Director General
+							</div>
+						</div>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/FDwTlFKM">Únete a Santiago y su equipo!</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<hr>
 		<section class="projects container mt-10">
 			<div class="row mb-0">
 				<div class="col-lg-6">
