--- a/soluciones.html
+++ b/soluciones.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -43,15 +44,15 @@
 	<main class="container">
 		<section class="projects mt-10">
 			<div class="w-100 text-right mb-5">
-				<img src="static/img/rocket_man.svg" style="width: 20%;">
+				<img src="static/img/growth.svg" style="width: 20%;">
 			</div>
 			<div class="mb-8">
 				<div class="section-title"
 					style="opacity: 0.8; font-weight: 400;">
-					Proyectos
+					Soluciones Integrales de Cooperación
 				</div>
 				<div class="content-body text-justify">
-					Descubre los proyectos que estamos colocando en marcha el el 2020 - 2021.
+					Estrategias diseñadas para tí.
 				</div>
 			</div>
 			<div class="row">
@@ -69,7 +70,7 @@
 						<br>
 						Meta: 2030
 					</div>
-					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">¡Quiero aportar a este proyecto!</a>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
 			<div class="row">
@@ -88,7 +89,7 @@
 						<br>
 						Meta: 2030
 					</div>
-					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">¡Quiero aportar a este proyecto!</a>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
 			<div class="row">
@@ -103,7 +104,7 @@
 					<div class="content-body">
 						Delivery y delivery premium desde una nueva perspectiva ecológica y mínimo impacto ambiental.
 					</div>
-					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">¡Quiero aportar a este proyecto!</a>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
 		</section>
