Agregar soluciones integrales de cooperacion.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 			<div class="header-caption container">
 				<div class="row">
 					<div class="col-lg-6 pl-5 pr-5">
-						<img src="static/img/think_thank.jpeg">
+						<img src="static/img/sic_main.jpg">
 					</div>
-					<div class="col-lg-6 pl-5 pr-5">
+					<div class="col-lg-6 pl-5 pr-5 m-auto">
 						<div class="header-content fade-in ml-4">
 							<div class="content-title"
 								style="opacity: 0.8; font-weight: 400;">
@@ -154,16 +154,16 @@
 			<div class="armando mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img src="static/img/santy.jpg" alt="">
+						<img class="mb-5" src="static/img/santy.jpg" alt="">
 					</div>
-					<div class="col-sm-9">
-						<div class="about-card-text mb-4">
+					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
+						<div class="content-text mb-4">
 							<div class="font-italic">
 								"Unir ideas y crear modelos de negocio exitosos para mi equipo es lo que más disfruto y lo que mejor sé hacer. ¿Te interesa que cree un modelo de negocio contigo? Escríbeme!"
 							</div>
 							<div>
 								<br>
-								Armando
+								Armando M.
 								<br>
 								Líder de Estrategia Corporativa
 							</div>
@@ -175,10 +175,10 @@
 			<div class="sebas mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img src="static/img/santy.jpg" alt="">
+						<img class="mb-5" src="static/img/santy.jpg" alt="">
 					</div>
-					<div class="col-sm-9">
-						<div class="about-card-text mb-4">
+					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
+						<div class="content-text mb-4">
 							<div class="font-italic">
 								"¿Conoces el green marketing? Es lo máximo! Es lo último en tendencias y es lo que se viene ahora. Déjame ayudarte en este tema..."
 							</div>
@@ -196,12 +196,12 @@
 			<div class="santy mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img src="static/img/santy.jpg" alt="">
+						<img class="mb-5" src="static/img/santy.jpeg" alt="">
 					</div>
-					<div class="col-sm-9">
-						<div class="about-card-text mb-4">
+					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
+						<div class="content-text mb-4">
 							<div class="font-italic">
-								"Cuando nos reunimos en equipo es el principio, mantenernos en equipo es el progreso, trabajar en equipo asegura el éxito."
+								"Cuando nos reunimos en equipo es el principio, mantenernos en equipo es el progreso y trabajar en equipo asegura el éxito."
 							</div>
 							<div>
 								<br>
@@ -210,7 +210,7 @@
 								Director General
 							</div>
 						</div>
-						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/FDwTlFKM">Únete a Santiago y su equipo!</a>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/FDwTlFKM">Únete al equipo de Santy!</a>
 					</div>
 				</div>
 			</div>
@@ -267,7 +267,10 @@
 						style="opacity: 0.5; font-weight: 400;">
 					BogotaGreen Para Tí.
 					</div>
-					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
+					<div class="content-body">
+						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
+						consciente.
+					</div>
 					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
 				</div>
 			</div>
