--- a/manifiesto.html
+++ b/manifiesto.html
@@ -24,16 +24,16 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link active" href="#">conócenos</a>
+		          <a class="nav-link" href="/manifiesto.html">manifiesto</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="/proyectos.html">proyectos</a>
 		        </li>
-		        <!--<li class="nav-item">
-		          <a class="nav-link" href="#">online store</a>
-		        </li>-->
 		        <li class="nav-item">
-		          <a class="nav-link" href="/contacto.html">hablemos</a>
+		          <a class="nav-link" href="/tienda.html">tienda virtual</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="https://hablemos574452.typeform.com/to/AHHYnkAm">hablemos</a>
 		        </li>
 		      </ul>
 		    </div>
