--- a/proyectos.html
+++ b/proyectos.html
@@ -24,16 +24,16 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link active" href="/manifiesto.html">conócenos</a>
+		          <a class="nav-link" href="/manifiesto.html">manifiesto</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">proyectos</a>
+		          <a class="nav-link" href="/proyectos.html">proyectos</a>
 		        </li>
-		        <!--<li class="nav-item">
-		          <a class="nav-link" href="#">online store</a>
-		        </li>-->
 		        <li class="nav-item">
-		          <a class="nav-link" href="/contacto.html">hablemos</a>
+		          <a class="nav-link" href="/tienda.html">tienda virtual</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="https://hablemos574452.typeform.com/to/AHHYnkAm">hablemos</a>
 		        </li>
 		      </ul>
 		    </div>
@@ -43,7 +43,7 @@
 	<main class="container">
 		<section class="projects mt-10">
 			<div class="w-100 text-right mb-5">
-				<img src="static/img/rocket_man.svg" style="width: 20%;">
+				<img src="static/img/nature.svg" style="width: 20%;">
 			</div>
 			<div class="mb-8">
 				<div class="section-title"
@@ -74,7 +74,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-5">
-					<img src="static/img/bogotagreen.png" alt="">
+					<img class="mt-5" src="static/img/bogotagreen.png" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
 					<div class="content-title"
@@ -93,7 +93,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-5">
-					<img src="static/img/eco_shipping.jpg" alt="">
+					<img class="mt-5" src="static/img/eco_shipping.jpg" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
 					<div class="content-title"
