--- a/soluciones.html
+++ b/soluciones.html
@@ -25,16 +25,16 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link active" href="/manifiesto.html">conócenos</a>
+		          <a class="nav-link" href="/manifiesto.html">manifiesto</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">proyectos</a>
+		          <a class="nav-link" href="/proyectos.html">proyectos</a>
 		        </li>
-		        <!--<li class="nav-item">
-		          <a class="nav-link" href="#">online store</a>
-		        </li>-->
 		        <li class="nav-item">
-		          <a class="nav-link" href="/contacto.html">hablemos</a>
+		          <a class="nav-link" href="/tienda.html">tienda virtual</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="https://hablemos574452.typeform.com/to/AHHYnkAm">hablemos</a>
 		        </li>
 		      </ul>
 		    </div>
@@ -46,65 +46,125 @@
 			<div class="w-100 text-right mb-5">
 				<img src="static/img/growth.svg" style="width: 20%;">
 			</div>
-			<div class="mb-8">
+			<div class="mb-5">
 				<div class="section-title"
 					style="opacity: 0.8; font-weight: 400;">
 					Soluciones Integrales de Cooperación
 				</div>
 				<div class="content-body text-justify">
-					Estrategias diseñadas para tí.
+					Lleva tu negocio al siguiente nivel a partir de las Soluciones Integrales de Cooperación.
+					<br>
+					<br>
+					Cuando accedes a las soluciones integrales de cooperación del HUB Cpi3nsa, accedes a una red de conocimiento y expertos conformado por el equipo multidisciplinario asignado para ti. Este equipo te brindará el acompañamiento integral que buscas hacia la evolución de tu negocio.
+					<br>
+					<br>
+					<strong>1. Ambiental.</strong> Implementación del modelo circular, eficiencia energética y sostenibilidad integral, asesoría y acompañamiento jurídico.
+					<br>
+					<strong>2. COVID-Free.</strong> Asesoría y acompañamiento integral para la reactiva económica (medidas de bioseguridad, protocolos, adaptación al nuevo mercado, innovación y tecnología).
+					<br>
+					<strong>3. Green Marketing.</strong> Activación de marca en medios alternativos y fortalecimiento de la economía digital.
+					<br>
+					<strong>4. Transformación cultural corporativa.</strong>
+					<br>
+					<br>
+					Encuentra la solución que mejor se ajuste a tu negocio:
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-5">
-					<img src="static/img/medegreen.png" alt="">
+			<hr>
+			<div class="row mt-5">
+				<div class="col-lg-5 m-auto">
+					<img src="static/img/darwin.jpeg" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
-					<div class="content-title"
+					<div class="content-title mb-0"
 						style="opacity: 0.5; font-weight: 400;">
-						Medegreen para tí
+						Darwin
+					</div>
+					<div class="content-subtitle mb-3"
+						style="opacity: 0.5; font-weight: 400; color: #222;">
+						Evoluciona
 					</div>
 					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
+						1. Ambiental.
 						<br>
+						2. COVID-Free.
 						<br>
-						Meta: 2030
+						3. Green Marketing
+						<br>
+						4. Transformación cultural corporativa
 					</div>
-					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
+					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">ADQUIRIR</a>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-5">
-					<img src="static/img/bogotagreen.png" alt="">
+			<div class="row mt-5">
+				<div class="col-lg-5 m-auto">
+					<img style="filter: grayscale(1)" src="static/img/davinci.jpeg" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
-					<div class="content-title"
+					<div class="content-title mb-0"
 						style="opacity: 0.5; font-weight: 400;">
-						Bogotagreen Para Tí
+						Da Vinci
+					</div>
+					<div class="content-subtitle mb-3"
+						style="opacity: 0.5; font-weight: 400; color: #222;">
+						Visionario — Elige tres opciones
 					</div>
 					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
-						consciente.
+						1. Ambiental.
 						<br>
+						2. COVID-Free.
 						<br>
-						Meta: 2030
+						3. Green Marketing.
+						<br>
+						4. Transformación cultural corporativa.
 					</div>
-					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
+					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">ADQUIRIR</a>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-5">
-					<img src="static/img/eco_shipping.jpg" alt="">
+			<div class="row mt-5">
+				<div class="col-lg-5 m-auto">
+					<img src="static/img/einstein.jpeg" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
-					<div class="content-title"
+					<div class="content-title mb-0"
 						style="opacity: 0.5; font-weight: 400;">
-						EcoShipping
+						Einstein
+					</div>
+					<div class="content-subtitle mb-3"
+						style="opacity: 0.5; font-weight: 400; color: #222;">
+						Relativo — Elige una de las dos opciones
 					</div>
 					<div class="content-body">
-						Delivery y delivery premium desde una nueva perspectiva ecológica y mínimo impacto ambiental.
+						1. Ambiental.
+						<br>
+						2. COVID-Free.
 					</div>
-					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
+					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">ADQUIRIR</a>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-lg-5 m-auto">
+					<img style="filter: grayscale(1);" src="static/img/tesla.jpeg" alt="">
+				</div>
+				<div class="col-lg-7 m-auto">
+					<div class="content-title mb-0"
+						style="opacity: 0.5; font-weight: 400;">
+						Tesla
+					</div>
+					<div class="content-subtitle mb-3"
+						style="opacity: 0.5; font-weight: 400; color: #222;">
+						Según el voltaje — Ármalo según tus necesidades
+					</div>
+					<div class="content-body">
+						1. Ambiental.
+						<br>
+						2. COVID-Free.
+						<br>
+						3. Green Marketing.
+						<br>
+						4. Transformación cultural corporativa.
+					</div>
+					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">ADQUIRIR</a>
 				</div>
 			</div>
 		</section>
