--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<div class="armando mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-5" src="static/img/santy.jpg" alt="">
+						<img class="mb-5" src="static/img/headshot.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
@@ -175,7 +175,7 @@
 			<div class="sebas mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-5" src="static/img/santy.jpg" alt="">
+						<img class="mb-5" src="static/img/headshot.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
