--- a/soluciones.html
+++ b/soluciones.html
@@ -58,7 +58,7 @@
 					Cuando accedes a las soluciones integrales de cooperación del HUB Cpi3nsa, accedes a una red de conocimiento y expertos conformado por el equipo multidisciplinario asignado para ti. Este equipo te brindará el acompañamiento integral que buscas hacia la evolución de tu negocio.
 					<br>
 					<br>
-					<strong>1. Ambiental.</strong> Implementación del modelo circular, eficiencia energética y sostenibilidad integral, asesoría y acompañamiento jurídico.
+					<strong>1. Ambiental.</strong> Implementación del modelo circular, eficiencia energética y sostenibilidad integral, asesoría y acompañamiento jurídico. Aquí logramos el máximo aprovechamiento de tu planta o establecimiento - máxima rentabilidad!
 					<br>
 					<strong>2. COVID-Free.</strong> Asesoría y acompañamiento integral para la reactiva económica (medidas de bioseguridad, protocolos, adaptación al nuevo mercado, innovación y tecnología).
 					<br>
