--- a/soluciones.html
+++ b/soluciones.html
@@ -58,13 +58,16 @@
 					Cuando accedes a las soluciones integrales de cooperación del HUB Cpi3nsa, accedes a una red de conocimiento y expertos conformado por el equipo multidisciplinario asignado para ti. Este equipo te brindará el acompañamiento integral que buscas hacia la evolución de tu negocio.
 					<br>
 					<br>
-					<strong>1. Ambiental.</strong> Implementación del modelo circular, eficiencia energética y sostenibilidad integral, asesoría y acompañamiento jurídico. Aquí logramos el máximo aprovechamiento de tu planta o establecimiento - máxima rentabilidad!
+					Esto es lo que necesitas saber!
 					<br>
-					<strong>2. COVID-Free.</strong> Asesoría y acompañamiento integral para la reactiva económica (medidas de bioseguridad, protocolos, adaptación al nuevo mercado, innovación y tecnología).
 					<br>
-					<strong>3. Green Marketing.</strong> Activación de marca en medios alternativos y fortalecimiento de la economía digital.
+					<strong>1. Ambiental.</strong> Implementación del modelo circular, eficiencia energética y sostenibilidad, toda la asesoría y acompañamiento que necesites en materia de leyes ambientales. Aquí logramos el máximo aprovechamiento de tu planta o establecimiento - máxima rentabilidad!
 					<br>
-					<strong>4. Transformación cultural corporativa.</strong>
+					<strong>2. COVID-Free.</strong> Asesoría y acompañamiento integral para la reactivación económica (mayores lineamientos de bioseguridad, mayor confianza a tus clientes!).
+					<br>
+					<strong>3. Green Marketing.</strong>  Nueva tendencia en marketing disponible para tí en nuestros paquetes, acompañado del fortalecimiento de tu economía digital (pregúntanos acerca del Green Marketing!).
+					<br>
+					<strong>4. Transformación cultural corporativa.</strong>  Aquí el mercado entenderá que vas camino a la transformación.
 					<br>
 					<br>
 					Encuentra la solución que mejor se ajuste a tu negocio:
