--- a/soluciones.html
+++ b/soluciones.html
@@ -192,10 +192,11 @@
 			</div>
 			<div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 			  <div class="m-auto">
-				<a href="#"> conócenos</a>&nbsp; | &nbsp;
+				<a href="static/docs/cpi3nsa_doc.html">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+				<a href="/manifiesto.html">manifiesto</a>&nbsp; | &nbsp;
 				<!--<a href="#">online store</a> &nbsp;-->
-				<a href="#"> proyectos</a>&nbsp; | &nbsp;
-				<a href="#"> política de privacidad</a>
+				<a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
+				<a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
 			  </div>
 			</div>
 			<div class="col-md-4 footer-content text-center no-desktop">
