--- a/index.html
+++ b/index.html
@@ -274,8 +274,14 @@
 					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
 				</div>
 			</div>
-			<div class="projects-cta">
-				<a href="/proyectos.html">Visita más proyectos</a>
+		</section>
+		<section style="background-color: #efefef;">
+			<div class="container text-center" style="padding: 8rem 2rem;">
+				<div class="section-title text-center" style="font-weight: 400;">
+					<a style="background-color: #2CCF96; color: #fff;" href="https://www.instagram.com/cpi3nsa/">CPI3NSA EN VIVO</a>
+					<br>
+					Conectate con nosotros todos los Lunes y Jueves a las 6pm en nuestro Cpi3nsa en VIVO impartiendo conocimiento.
+				</div>
 			</div>
 		</section>
 	</main>
