--- a/soluciones.html
+++ b/soluciones.html
@@ -48,24 +48,24 @@
 			</div>
 			<div class="mb-5">
 				<div class="section-title"
-					style="opacity: 0.8; font-weight: 400;">
+					style="opacity: 0.9; font-weight: 400;">
 					Soluciones Integrales de Cooperación
 				</div>
 				<div class="content-body text-justify">
 					Lleva tu negocio al siguiente nivel a partir de las Soluciones Integrales de Cooperación.
 					<br>
 					<br>
-					Cuando accedes a las soluciones integrales de cooperación del HUB Cpi3nsa, accedes a una red de conocimiento y expertos conformado por el equipo multidisciplinario asignado para ti. Este equipo te brindará el acompañamiento integral que buscas hacia la evolución de tu negocio.
+					Cuando adquieres a las soluciones integrales de cooperación del HUB Cpi3nsa, accedes a una red de conocimiento y expertos conformado por el equipo multidisciplinario asignado para ti. Este equipo te brindará el acompañamiento integral que buscas hacia la evolución de tu negocio.
 					<br>
 					<br>
 					Esto es lo que necesitas saber!
 					<br>
 					<br>
-					<strong>1. Ambiental.</strong> Implementación del modelo circular, eficiencia energética y sostenibilidad, toda la asesoría y acompañamiento que necesites en materia de leyes ambientales. Aquí logramos el máximo aprovechamiento de tu planta o establecimiento - máxima rentabilidad!
+					<strong>1. Ambiental.</strong> Incluye implementación del modelo circular, eficiencia energética, sostenibilidad y toda la asesoría y acompañamiento que necesites en materia de leyes ambientales. Aquí logramos el máximo aprovechamiento de tu planta o establecimiento - máxima rentabilidad!
 					<br>
-					<strong>2. COVID-Free.</strong> Asesoría y acompañamiento integral para la reactivación económica (mayores lineamientos de bioseguridad, mayor confianza a tus clientes!).
+					<strong>2. COVID-Free.</strong> Incluye acompañamiento y estrategias para la reapertura económica, diseñadas específicamente para tu negocio. Incluye lineamientos de bioseguridad (mayores lineamientos de bioseguridad, mayor confianza a tus clientes!).
 					<br>
-					<strong>3. Green Marketing.</strong>  Nueva tendencia en marketing disponible para tí en nuestros paquetes, acompañado del fortalecimiento de tu economía digital (pregúntanos acerca del Green Marketing!).
+					<strong>3. Green Marketing.</strong>  Nueva tendencia en marketing disponible para tí en nuestros paquetes, acompañado del fortalecimiento de tu economía digital. Pregúntanos acerca del Green Marketing!
 					<br>
 					<strong>4. Transformación cultural corporativa.</strong>  Aquí el mercado entenderá que vas camino a la transformación.
 					<br>
@@ -85,12 +85,12 @@
 					</div>
 					<div class="content-subtitle mb-3"
 						style="opacity: 0.5; font-weight: 400; color: #222;">
-						Evoluciona
+						Evoluciona hacia la sostenibilidad.
 					</div>
 					<div class="content-body">
-						1. Ambiental.
+						1. Ambiental
 						<br>
-						2. COVID-Free.
+						2. COVID-Free
 						<br>
 						3. Green Marketing
 						<br>
@@ -110,16 +110,18 @@
 					</div>
 					<div class="content-subtitle mb-3"
 						style="opacity: 0.5; font-weight: 400; color: #222;">
-						Visionario — Elige tres opciones
+						Visionario — Dando pasos importantes
+						<br>
+						Elige tres opciones
 					</div>
 					<div class="content-body">
-						1. Ambiental.
+						1. Ambiental
 						<br>
-						2. COVID-Free.
+						2. COVID-Free
 						<br>
-						3. Green Marketing.
+						3. Green Marketing
 						<br>
-						4. Transformación cultural corporativa.
+						4. Transformación cultural corporativa
 					</div>
 					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">ADQUIRIR</a>
 				</div>
@@ -135,7 +137,9 @@
 					</div>
 					<div class="content-subtitle mb-3"
 						style="opacity: 0.5; font-weight: 400; color: #222;">
-						Relativo — Elige una de las dos opciones
+						Relativo — Lo importante es empezar
+						<br>
+						Elige una de las dos opciones
 					</div>
 					<div class="content-body">
 						1. Ambiental.
@@ -172,6 +176,14 @@
 			</div>
 		</section>
 	</main>
+	<section style="background-color: #efefef;">
+		<div class="container text-center" style="padding: 8rem 2rem;">
+			<div class="section-title text-left" style="font-weight: 400;">
+				Hola! Soy Abi, necesitas ayuda para tomar una buena decisión?
+				<a style="background-color: #2CCF96; color: #fff; text-decoration: underline;" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Escríbeme para asistirte!</a>
+			</div>
+		</div>
+	</section>
 	<footer class="footer text-white pt-100 pb-100">
 		<div class="mr-5 ml-5">
 		  <div class="row">
