--- a/index.html
+++ b/index.html
@@ -53,15 +53,30 @@
     		<div class="col-lg no-mobile">
     			<img src="static/img/plan.svg">
     		</div>
-    	</div>
+		</div>
     </div>
 	</header>
 	<main>
-		<section class="mb-8">
+		<section class="container mt-8 mb-8">
+			<div class="row">
+				<div class="col-sm-4 m-auto text-center">
+					<img class="intern-logos" src="static/img/oea_logo.png">
+				</div>
+				<div class="col-sm-4 m-auto text-center">
+					<img class="intern-logos" src="static/img/onu_logo.png">
+				</div>
+				<div class="col-sm-4 m-auto text-center">
+					<img class="intern-logos" src="static/img/area_abur.png">
+				</div>
+			</div>
+		</section>
+		<section class="mt-8 mb-8">
 			<div class="header-caption container">
 				<div class="row">
 					<div class="col-lg-6 pl-5 pr-5">
-						<img src="static/img/sic_main.jpg">
+						<video controls style="width: 100%;">
+							<source src="static/img/what_are_think_tank.mp4" type="video/mp4">
+						</video>
 					</div>
 					<div class="col-lg-6 pl-5 pr-5 m-auto">
 						<div class="header-content fade-in ml-4">
